addfed logos and stuff idk

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
         <li>
           <a href="#" class="js-btn">Gravium</a>
         </li>
+		<!--
         <li>
           <a href="#" class="js-btn focus">Swap DSR - GRV</a>
         </li>
+		-->
         <li>
           <a href="#" class="js-btn">Masternodes</a>
         </li>
@@ -104,7 +106,8 @@
 
     </article>
   </section>
-
+  ffff 
+  <!--
   <section class="swap js-section">
     <article>
       <h2 class="blocktitle">Swap DSR to GRV</h2>
@@ -121,7 +124,7 @@
       </div>
     </article>
   </section>
-
+-->
   <section class="masternodes js-section">
     <article class="odd">
       <h2 class="blocktitle">Masternodes</h2>
