made a bunch of changes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav class="header__nav">
       <ul>
         <li>
-          <a href="#" class="js-btn">Gravium</a>
+          <a href="#" class="js-btn">Curium</a>
         </li>
 		<!--
         <li>
@@ -69,8 +69,8 @@
 
   <section class="  intro js-section">
     <article class="odd">
-      <h2 class="blocktitle">Gravium</h2>
-      <p>Gravium (GRV) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
+      <h2 class="blocktitle">Curium</h2>
+      <p>Curium (GRV) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
         Backed by the security of the latest in ASIC resistant hashing algorithm it is a project that has been engineered
         specifically for implementation across everyday business and personal transactions. With low transaction fees and
         1-minute block times, you will have your funds available anywhere and anytime.</p>
@@ -86,7 +86,7 @@
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/secure.svg" alt="">
-          <p>Gravium is supported by multiple layers of security including both mining and masternode support</p>
+          <p>Curium is supported by multiple layers of security including both mining and masternode support</p>
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/team.svg" alt="">
@@ -113,9 +113,9 @@
       <h2 class="blocktitle">Swap DSR to GRV</h2>
       <div class="block">
         <p>
-          <a href="https://docs.google.com/document/d/1jkx9JUD07LPKyYqo5brytLWt-o1TIhwsDuyxj6PCPg0/edit?usp=sharing" target="_blank">Please follow these steps carefully;</a> Gravium team takes no responsibility for any lost coins because of error
+          <a href="https://docs.google.com/document/d/1jkx9JUD07LPKyYqo5brytLWt-o1TIhwsDuyxj6PCPg0/edit?usp=sharing" target="_blank">Please follow these steps carefully;</a> Curium team takes no responsibility for any lost coins because of error
           from your end.</p>
-        <a href="https://swap.gravium.io" target="_blank">
+        <a href="https://swap.curium.io" target="_blank">
           <img src="img/svg/switch.svg" alt=""> Swap DSR for GRV
         </a>
         <p>
@@ -130,13 +130,13 @@
       <h2 class="blocktitle">Masternodes</h2>
       <div class="block">
         <p>Masternodes are a secondary network of nodes so that blockchain can include features such as ‘Instant Send’ and ‘Anonymous
-          Transactions’ as well as increasing the overall security. Gravium requires 1,000GRV collateral to secure a masternode,
-          where it will need to be held on a static IP. The team at Gravium has created one of the easiest installation guides
+          Transactions’ as well as increasing the overall security. Curium requires 1,000GRV collateral to secure a masternode,
+          where it will need to be held on a static IP. The team at Curium has created one of the easiest installation guides
           that even a first-timer can set up a masternode quickly and easily.
         </p>
         <p>
           check out the guide for setup:
-          <a href="https://github.com/Gravium/gravium-docs/blob/master/Documentation/masternode_setup_vps.md">Masternode setup</a>
+          <a href="https://github.com/Curium/curium-docs/blob/master/Documentation/masternode_setup_vps.md">Masternode setup</a>
         </p>
       </div>
     </article>
@@ -145,14 +145,14 @@
 
   <section class="wallet js-section">
     <article>
-      <h3 class="subtitle">Download the latest Gravium wallet</h3>
+      <h3 class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
-        <a href="https://github.com/Gravium/gravium/releases/download/REL/graviumcore-0.12.2-win64-setup.exe" target="_blank">
-          <img src="img/svg/windows.svg" alt=""> Windows</a>
-        <a href="https://github.com/Gravium/gravium/releases/download/REL/Gravium-Core.dmg" target="_blank">
-          <img src="img/svg/macos.svg" alt=""> MacOs</a>
-        <a href="https://github.com/Gravium/gravium/releases/download/REL/gravium-x86_64-pc-linux-gnu.tar.gz" target="_blank">
-          <img src="img/svg/tux.svg" alt=""> Linux</a>
+        
+        <img src="img/svg/windows.svg" alt=""> <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank">64 </a> | <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"> 32 </a>
+        <img src="img/svg/macos.svg" alt=""> <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank">MacOs </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"> High Sierra Only</a>  		  
+        <img src="img/svg/tux.svg" alt=""><a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank">64 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"> 32 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"> Arm Pi</a>
+        <a href="https://github.com/curiumofficial/curium/releases">
+          <img src="img/svg/sc.svg" alt=""> Source Code</a>
         <!--
         <a href="" target="_blank">
           <img src="img/svg/internet.svg" alt=""> Web Wallet</a>
@@ -166,15 +166,10 @@
     <article class="odd">
       <h2 class="blocktitle">Resources</h2>
       <div class="explorer">
-        <a href="https://explorer.gravium.io" target="_blank">Blockexplorer</a>
+        <a href="https://explorer.curium.io" target="_blank">Blockexplorer</a>
       </div>
       <div class="pools">
-        <h3>Various miningpools available</h3>
-        <a href="https://bsod.pw/">BSOD</a>
-        <a href="https://blockcruncher.com/">Blockcruncher</a>
-        <a href="https://gos.cx">Gos</a>
-        <a href="https://hive.gulfcoastmining.com/">Hive</a>
-        <a href="https://unimining.net">Unimining</a>
+
       </div>
     </article>
   </section>
@@ -193,10 +188,10 @@
         </div>
 
         <div class="question">
-          <h3 class="">Who is the Gravium Team?</h3>
+          <h3 class="">Who is the Curium Team?</h3>
           <div class="answer">
             Developers, contributors and moderators originating from the community that are stepping up and taking various responsibilities
-            for a brighter future of Gravium.
+            for a brighter future of Curium.
           </div>
         </div>
 
@@ -223,10 +218,10 @@
     <nav class="footer__nav">
       <ul>
         <li>
-          <a href="https://github.com/Gravium">Github</a>
+          <a href="https://github.com/Curium">Github</a>
         </li>
         <li>
-          <a href="https://twitter.com/Gravium">Twitter</a>
+          <a href="https://twitter.com/Curium">Twitter</a>
         </li>
         <li>
           <a href="https://discord.gg/KvsMahT">Discord</a>
