--- a/index.html
+++ b/index.html
@@ -107,16 +107,13 @@
     </article>
   </section>
   ffff 
-  <!--
+
   <section class="swap js-section">
     <article>
-      <h2 class="blocktitle">Swap DSR to GRV</h2>
+      <h2 class="blocktitle">Swap CRU OLD to CRU</h2>
       <div class="block">
         <p>
-          <a href="https://docs.google.com/document/d/1jkx9JUD07LPKyYqo5brytLWt-o1TIhwsDuyxj6PCPg0/edit?usp=sharing" target="_blank">Please follow these steps carefully;</a> Curium team takes no responsibility for any lost coins because of error
-          from your end.</p>
-        <a href="https://swap.curium.io" target="_blank">
-          <img src="img/svg/switch.svg" alt=""> Swap DSR for GRV
+
         </a>
         <p>
 
@@ -124,7 +121,7 @@
       </div>
     </article>
   </section>
--->
+
   <section class="masternodes js-section">
     <article class="odd">
       <h2 class="blocktitle">Masternodes</h2>
@@ -147,12 +144,19 @@
     <article>
       <h3 class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
-        
-        <img src="img/svg/windows.svg" alt=""> <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank">64 </a> | <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"> 32 </a>
-        <img src="img/svg/macos.svg" alt=""> <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank">MacOs </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"> High Sierra Only</a>  		  
-        <img src="img/svg/tux.svg" alt=""><a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank">64 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"> 32 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"> Arm Pi</a>
-        <a href="https://github.com/curiumofficial/curium/releases">
-          <img src="img/svg/sc.svg" alt=""> Source Code</a>
+        <div>
+			<img src="img/svg/windows.svg" alt=""> <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank">64 </a> | <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"> 32 </a>
+		</div>
+		<div>
+			<img src="img/svg/macos.svg" alt=""> <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank">MacOs </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"> High Sierra Only</a>  		  
+        </div>
+		<div>
+		<img src="img/svg/tux.svg" alt=""><a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank">64 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"> 32 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"> Arm Pi</a>
+        </div>
+		<div>
+			<a href="https://github.com/curiumofficial/curium/releases">
+				<img src="img/svg/sc.svg" alt=""> Source Code</a>
+		</div>		
         <!--
         <a href="" target="_blank">
           <img src="img/svg/internet.svg" alt=""> Web Wallet</a>
