--- a/index.html
+++ b/index.html
@@ -144,19 +144,16 @@
     <article>
       <h3 class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
-        <div>
-			<img src="img/svg/windows.svg" alt=""> <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank">64 </a> | <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"> 32 </a>
-		</div>
-		<div>
-			<img src="img/svg/macos.svg" alt=""> <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank">MacOs </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"> High Sierra Only</a>  		  
-        </div>
-		<div>
-		<img src="img/svg/tux.svg" alt=""><a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank">64 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"> 32 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"> Arm Pi</a>
-        </div>
-		<div>
-			<a href="https://github.com/curiumofficial/curium/releases">
-				<img src="img/svg/sc.svg" alt=""> Source Code</a>
-		</div>		
+        
+		<img src="img/svg/windows.svg" alt=""> 
+			<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank">64 </a> | <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"> 32 </a>
+		<img src="img/svg/macos.svg" alt=""> 
+			<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank">MacOs </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"> High Sierra Only</a>  		  
+		<img src="img/svg/tux.svg" alt="">
+			<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank">64 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"> 32 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"> Arm Pi</a>
+		<a href="https://github.com/curiumofficial/curium/releases">
+			<img src="img/svg/sc.svg" alt=""> Source Code</a>
+		
         <!--
         <a href="" target="_blank">
           <img src="img/svg/internet.svg" alt=""> Web Wallet</a>
