--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
   <div class="mobile js-mobile" id="mobileBtn">☰</div>
 
   <header class="js-header" id="header">
-    <div class="logo"></div>
     <nav class="header__nav">
       <ul>
         <li>
@@ -61,11 +60,8 @@
     </nav>
   </header>
   <div class="hero" id="hero">
-<<<<<<< HEAD
-=======
-    <h1 class="title">Gravium</h1>
->>>>>>> parent of 2ded37f... Merge pull request #1 from Gravium/master
 
+    <img class="title" src="img/logo.png" style="width: 25%;">
     <div id="particles-js"></div>
 
   </div>
@@ -116,15 +112,8 @@
     <article>
       <h2 class="blocktitle">Swap CRU OLD to CRU</h2>
       <div class="block">
-<<<<<<< HEAD
         <p>
 
-=======
-        <p>To help the victims of the DSR scam you can swap your DSR for GRV here;</p>
-        <a href="" target="_blank">
-          <img src="img/svg/switch.svg" alt="">
-          Swap DSR for GRV
->>>>>>> parent of 2ded37f... Merge pull request #1 from Gravium/master
         </a>
         <p>
 
