--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </li>
 		<!--
         <li>
-          <a href="#" class="js-btn focus">Swap DSR - GRV</a>
+          <a href="#" class="js-btn focus">Swap DSR - CRU</a>
         </li>
 		-->
         <li>
@@ -70,7 +70,7 @@
   <section class="  intro js-section">
     <article class="odd">
       <h2 class="blocktitle">Curium</h2>
-      <p>Curium (GRV) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
+      <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
         Backed by the security of the latest in ASIC resistant hashing algorithm it is a project that has been engineered
         specifically for implementation across everyday business and personal transactions. With low transaction fees and
         1-minute block times, you will have your funds available anywhere and anytime.</p>
@@ -82,7 +82,7 @@
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/algo.svg" alt="">
-          <p>The latest ASIC resistant X16r algorithm, ensuring GRV will stay decentralised</p>
+          <p>The latest POS algorithm, ensuring CRU will stay decentralised</p>
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/secure.svg" alt="">
@@ -127,7 +127,7 @@
       <h2 class="blocktitle">Masternodes</h2>
       <div class="block">
         <p>Masternodes are a secondary network of nodes so that blockchain can include features such as ‘Instant Send’ and ‘Anonymous
-          Transactions’ as well as increasing the overall security. Curium requires 1,000GRV collateral to secure a masternode,
+          Transactions’ as well as increasing the overall security. Curium requires 1,000CRU collateral to secure a masternode,
           where it will need to be held on a static IP. The team at Curium has created one of the easiest installation guides
           that even a first-timer can set up a masternode quickly and easily.
         </p>
@@ -205,10 +205,9 @@
         </div>
 
         <div class="question">
-          <h3 class="">Why x16r?</h3>
+          <h3 class="">Why POS?</h3>
           <div class="answer">
-            ASIC’s are compromising the cryptocurrencies by becoming the majority market share. As hashing algorithms fall one by one
-            under ASIC domination x16r provides a long-term safe haven for GPU miners.
+            POS is ecofriendy and supports the people who hold Curium without it Curium would be killing the Earth instead of starting a revalution 
           </div>
         </div>
       </div>
@@ -222,10 +221,10 @@
           <a href="https://github.com/Curium">Github</a>
         </li>
         <li>
-          <a href="https://twitter.com/Curium">Twitter</a>
+          <a href="https://github.com/curiumofficial">Twitter</a>
         </li>
         <li>
-          <a href="https://discord.gg/KvsMahT">Discord</a>
+          <a href="https://discord.gg/BNxtX7b">Discord</a>
         </li>
       </ul>
     </nav>
