--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
     <nav class="header__nav">
       <ul>
         <li>
-          <a href="#" class="js-btn">Curium</a>
+          <a  class="js-btn">Curium</a>
         </li>
 		<!--
         <li>
-          <a href="#" class="js-btn focus">Swap DSR - CRU</a>
+          <a  class="js-btn focus">Swap DSR - CRU</a>
         </li>
 		-->
         <li>
-          <a href="#" class="js-btn">Masternodes</a>
+          <a  class="js-btn">Masternodes</a>
         </li>
         <li>
-          <a href="#" class="js-btn">Wallet</a>
+          <a  class="js-btn">Wallet</a>
         </li>
         <li>
-          <a href="#" class="js-btn">Resources</a>
+          <a  class="js-btn">Resources</a>
         </li>
         <li>
-          <a href="#" class="js-btn">FAQ</a>
+          <a  class="js-btn">FAQ</a>
         </li>
         <li>
-          <a href="#" class="js-btn">Contact</a>
+          <a  class="js-btn">Contact</a>
         </li>
       </ul>
     </nav>
