Revert "Update index.html"
This reverts commit e84f4d5fb7d5ac0a5e4a647e2b427dbc737698a7.

--- a/index.html
+++ b/index.html
@@ -34,25 +34,27 @@
     <nav class="header__nav">
       <ul>
         <li>
-          <a class="js-btn">Gravium</a>
+          <a  class="js-btn">Curium</a>
+        </li>
+		<!--
+        <li>
+          <a  class="js-btn focus">Swap DSR - CRU</a>
+        </li>
+		-->
+        <li>
+          <a  class="js-btn">Masternodes</a>
         </li>
         <li>
-          <a class="js-btn focus">Swap DSR - GRV</a>
+          <a  class="js-btn">Wallet</a>
         </li>
         <li>
-          <a class="js-btn">Masternodes</a>
+          <a  class="js-btn">Resources</a>
         </li>
         <li>
-          <a class="js-btn">Wallet</a>
+          <a  class="js-btn">FAQ</a>
         </li>
         <li>
-          <a class="js-btn">Resources</a>
-        </li>
-        <li>
-          <a class="js-btn">FAQ</a>
-        </li>
-        <li>
-          <a class="js-btn">Contact</a>
+          <a  class="js-btn">Contact</a>
         </li>
       </ul>
     </nav>
@@ -67,8 +69,8 @@
 
   <section class="  intro js-section">
     <article class="odd">
-      <h2 class="blocktitle">Gravium</h2>
-      <p>Gravium (GRV) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
+      <h2 class="blocktitle">Curium</h2>
+      <p>Curium (CRU) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
         Backed by the security of the latest in ASIC resistant hashing algorithm it is a project that has been engineered
         specifically for implementation across everyday business and personal transactions. With low transaction fees and
         1-minute block times, you will have your funds available anywhere and anytime.</p>
@@ -80,11 +82,11 @@
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/algo.svg" alt="">
-          <p>The latest ASIC resistant X16r algorithm, ensuring GRV will stay decentralised</p>
+          <p>The latest POS algorithm, ensuring CRU will stay decentralised</p>
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/secure.svg" alt="">
-          <p>Gravium is supported by multiple layers of security including both mining and masternode support</p>
+          <p>Curium is supported by multiple layers of security including both mining and masternode support</p>
         </div>
         <div class="feature__block">
           <img class="feature-img" src="img/svg/team.svg" alt="">
@@ -104,16 +106,14 @@
 
     </article>
   </section>
+  ffff 
 
   <section class="swap js-section">
     <article>
-      <h2 class="blocktitle">Swap DSR to GRV</h2>
+      <h2 class="blocktitle">Swap CRU OLD to CRU</h2>
       <div class="block">
         <p>
-          <a href="https://docs.google.com/document/d/1jkx9JUD07LPKyYqo5brytLWt-o1TIhwsDuyxj6PCPg0/edit?usp=sharing" target="_blank">Please follow these steps carefully;</a> Gravium team takes no responsibility for any lost coins because of error
-          from your end.</p>
-        <a href="https://swap.gravium.io" target="_blank">
-          <img src="img/svg/switch.svg" alt=""> Swap DSR for GRV
+
         </a>
         <p>
 
@@ -127,13 +127,13 @@
       <h2 class="blocktitle">Masternodes</h2>
       <div class="block">
         <p>Masternodes are a secondary network of nodes so that blockchain can include features such as ‘Instant Send’ and ‘Anonymous
-          Transactions’ as well as increasing the overall security. Gravium requires 1,000GRV collateral to secure a masternode,
-          where it will need to be held on a static IP. The team at Gravium has created one of the easiest installation guides
+          Transactions’ as well as increasing the overall security. Curium requires 10,000CRU collateral to secure a masternode,
+          where it will need to be held on a static IP. The team at Curium has created one of the easiest installation guides
           that even a first-timer can set up a masternode quickly and easily.
         </p>
         <p>
           check out the guide for setup:
-          <a href="https://docs.google.com/document/d/1TNXbccH5wIG2r6ALWXKvTOyMU9UV_oZTuN9f6QsyZtA" target="_blank">Masternode Guide</a>
+          <a href="https://github.com/Curium/curium-docs/blob/master/Documentation/masternode_setup_vps.md">Masternode setup</a>
         </p>
       </div>
     </article>
@@ -142,14 +142,18 @@
 
   <section class="wallet js-section">
     <article>
-      <h3 class="subtitle">Download the latest Gravium wallet</h3>
+      <h3 class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
-        <a href="https://github.com/Gravium/gravium/releases/download/REL/graviumcore-0.12.2-win64-setup.exe" target="_blank">
-          <img src="img/svg/windows.svg" alt=""> Windows</a>
-        <a href="https://github.com/Gravium/gravium/releases/download/REL/Gravium-Core.dmg" target="_blank">
-          <img src="img/svg/macos.svg" alt=""> MacOs</a>
-        <a href="https://github.com/Gravium/gravium/releases/download/REL/gravium-x86_64-pc-linux-gnu.tar.gz" target="_blank">
-          <img src="img/svg/tux.svg" alt=""> Linux</a>
+        
+		<img src="img/svg/windows.svg" alt=""> 
+			<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank">64 </a> | <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"> 32 </a>
+		<img src="img/svg/macos.svg" alt=""> 
+			<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank">MacOs </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"> High Sierra Only</a>  		  
+		<img src="img/svg/tux.svg" alt="">
+			<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank">64 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"> 32 </a>|<a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"> Arm Pi</a>
+		<a href="https://github.com/curiumofficial/curium/releases">
+			<img src="img/svg/sc.svg" alt=""> Source Code</a>
+		
         <!--
         <a href="" target="_blank">
           <img src="img/svg/internet.svg" alt=""> Web Wallet</a>
@@ -163,26 +167,10 @@
     <article class="odd">
       <h2 class="blocktitle">Resources</h2>
       <div class="explorer">
-        <a href="https://explorer.gravium.io" style="font-size: 1.6em;" target="_blank">Official Block Explorer - explorer.gravium.io</a>
-        <br>
-        <h3>Non-official block explorer</h3>
-        <a href="https://grv.ccore.online/" target="_blank">CryptoCore</a>
+        <a href="https://explorer.curium.io" target="_blank">Blockexplorer</a>
       </div>
-      <br>
       <div class="pools">
-        <h3>Various miningpools available</h3>
-        <a href="https://bsod.pw/" target="_blank">BSOD</a>
-        <a href="https://blockcruncher.com/" target="_blank">Blockcruncher</a>
-        <a href="https://hive.gulfcoastmining.com/" target="_blank">Hive</a>
-        <a href="https://unimining.net" target="_blank">Unimining</a>
-        <a href="http://weekendpool.net/" target="_blank">WeekendPool</a>
-        <a href="https://arcpool.com/" target="_blank">Arcpool</a>
-        <a href="https://www.dummdipool.de/" target="_blank">dummdipool</a>
-        <a href="https://pool.coinharvest.io/" target="_blank">CoinHarvest</a>
-        <a href="https://fairmine.pro/site/coininfo?coin=GRV" target="_blank">FairMine</a>
-        <a href="https://angrypool.com" target="_blank">AngryPool</a>
-        <a href="https://www.alttank.ca/" target="_blank">AltTank</a>
-        <a href="https://protopool.net" target="_blank">ProtoPool</a>
+
       </div>
     </article>
   </section>
@@ -201,10 +189,10 @@
         </div>
 
         <div class="question">
-          <h3 class="">Who is the Gravium Team?</h3>
+          <h3 class="">Who is the Curium Team?</h3>
           <div class="answer">
             Developers, contributors and moderators originating from the community that are stepping up and taking various responsibilities
-            for a brighter future of Gravium.
+            for a brighter future of Curium.
           </div>
         </div>
 
@@ -217,10 +205,9 @@
         </div>
 
         <div class="question">
-          <h3 class="">Why x16r?</h3>
+          <h3 class="">Why POS?</h3>
           <div class="answer">
-            ASIC’s are compromising the cryptocurrencies by becoming the majority market share. As hashing algorithms fall one by one
-            under ASIC domination x16r provides a long-term safe haven for GPU miners.
+            POS is ecofriendy and supports the people who hold Curium without it Curium would be killing the Earth instead of starting a revalution 
           </div>
         </div>
       </div>
@@ -231,13 +218,13 @@
     <nav class="footer__nav">
       <ul>
         <li>
-          <a href="https://github.com/Gravium">Github</a>
+          <a href="https://github.com/Curium">Github</a>
         </li>
         <li>
-          <a href="https://twitter.com/Gravium">Twitter</a>
+          <a href="https://github.com/curiumofficial">Twitter</a>
         </li>
         <li>
-          <a href="https://discord.gg/KvsMahT">Discord</a>
+          <a href="https://discord.gg/BNxtX7b">Discord</a>
         </li>
       </ul>
     </nav>
