--- a/index.html
+++ b/index.html
@@ -146,8 +146,9 @@
       <h3 class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
         
-      <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit<span><img src="img/svg/andriod.svg"></span></button></a>
-
+        <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit<span><img src="img/svg/andriod.svg"></span></button></a>
+        <button class="raise">Windows 32-bit<span><img src="img/svg/andriod.svg"></span></button>
+        <button class="raise">Windows 32-bit</span></button>
 		
         <!--
         <a href="" target="_blank">
