--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
     <article>
       <h3 class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
-        
-        <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit<span><img src="img/svg/andriod.svg"></span></button></a>
-        <button class="raise">Windows 32-bit<span><img src="img/svg/andriod.svg"></span></button>
-        <button class="raise">Windows 32-bit</span></button>
-		
+        <div class="buttons">
+           <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit<span><img src="img/svg/andriod.svg"></span></button></a>
+           <button class="raise">Windows 32-bit<span><img src="img/svg/andriod.svg"></span></button>
+           <button class="raise">Windows 32-bit</span></button>
         <!--
         <a href="" target="_blank">
           <img src="img/svg/internet.svg" alt=""> Web Wallet</a>
         <a href="" target="_blank">
-          <img src="img/svg/andriod.svg" alt=""> Mobile wallet</a>-->
+             <img src="img/svg/andriod.svg" alt=""> Mobile wallet</a>-->
+	    </div>    
       </div>
     </article>
   </section>
