--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
       <div class="wallets">
         <div class="buttons">
            <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit<span><img src="img/svg/andriod.svg"></span></button></a>
-           <button class="raise">Windows 32-bit<span><img src="img/png/macos.png"></span></button>
+           <button class="raise">Windows 32-bit<span><img height="16" width="16" src="img/png/macos.png"></span></button>
            <button class="raise">Windows 32-bit</span></button>
         <!--
         <a href="" target="_blank">
