--- a/index.html
+++ b/index.html
@@ -146,14 +146,14 @@
       <h3 class="subtitle">Download the latest Curium wallet</h3>
       <div class="wallets">
         <div class="buttons">
-           <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit</button></a>
-	   <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank"><button class="raise">Windows 64-bit</button></a>
-	   <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 32-bit</button></a>
-	   <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 64-bit</button></a>
-	   <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"><button class="raise">Raspberry Pi/ ARM</button></a>	
-	   <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank"><button class="raise">Mac</button></a>
-	   <a href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"><button class="raise">Mac High Sierra</button></a>
-	   <a href="https://github.com/curiumofficial/curium" target="_blank"><button class="raise">Source Code</button></a>	
+           <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win32-setup-unsigned.exe" target="_blank"><button class="raise">Windows 32-bit</button></a>
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-win64-setup-unsigned.exe" target="_blank"><button class="raise">Windows 64-bit</button></a>
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 32-bit</button></a>
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 64-bit</button></a>
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-arm-linux-gnueabihf.tar.gz" target="_blank"><button class="raise">Raspberry Pi/ ARM</button></a>	
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank"><button class="raise">Mac</button></a>
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"><button class="raise">Mac High Sierra</button></a>
+	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium" target="_blank"><button class="raise">Source Code</button></a>	
         <!--
         <a href="" target="_blank">
           <img src="img/svg/internet.svg" alt=""> Web Wallet</a>
