--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-osx-unsigned.dmg" target="_blank"><button class="raise">Mac</button></a>  
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curiumn-OSX-High-Sierra-qt.dmg" target="_blank"><button class="raise">Mac High Sierra</button></a>	   
 	      
-	    <div>  
+	   <div class="wallets"> 
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-i686-pc-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 32-bit</button></a>  
 	   <a style="text-decoration: none;" href="https://github.com/curiumofficial/curium/releases/download/v1.0.0/curium-1.0.0-x86_64-linux-gnu.tar.gz" target="_blank"><button class="raise">Linux 64-bit</button></a>
 
