--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <li>
           <a  class="js-btn">Curium</a>
         </li>
-		<!--
+		
         <li>
-          <a  class="js-btn focus">Swap DSR - CRU</a>
+          <a  class="js-btn focus">Swap OldCRU - CRU</a>
         </li>
 		-->
         <li>
@@ -114,7 +114,7 @@
       <h2 class="blocktitle">Swap CRU OLD to CRU</h2>
       <div class="block">
         <p>
-
+		https://e-rave.nl/curium-coin-swap
         </a>
         <p>
 
