--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </li>
 		
         <li>
-          <a  class="js-btn focus">Swap OldCRU - CRU</a>
+          <a  class="js-btn focus">Exchanges</a>
         </li>
 		
         <li>
@@ -111,10 +111,10 @@
 
   <section class="swap js-section">
     <article>
-      <h2 class="blocktitle">Swap CRU OLD to CRU</h2>
+      <h2 class="blocktitle">Exchanges</h2>
       <div class="block">
         <p>
-		https://e-rave.nl/curium-coin-swap
+		There are no exchanges on the new network atm
         </a>
         <p>
 
