--- a/index.html
+++ b/index.html
@@ -172,11 +172,8 @@
     <article class="odd">
       <h2 class="blocktitle">Resources</h2>
       <div class="explorer">
-        <a href="https://explorer.curium.io" target="_blank">Blockexplorer</a>
-      </div>
-      <div class="pools">
-
-      </div>
+        <a href="https://explorer.curiumofficial.com" target="_blank">Official Blockexplorer</a>
+	<a href="https://altexplorer.co/coin/cru" target="_blank">Altexplorer</a>
     </article>
   </section>
 
