--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title></title>
-  <meta name="description" content="">
+  <title>Curium Digital Money</title>
+  <meta name="description" content="Curium (CRU) is a community driven cryptocurrency ensuring decentralisation by giving power to the voice of individuals.
+        Backed by the security of the latest in ASIC resistant hashing algorithm it is a project that has been engineered
+        specifically for implementation across everyday business and personal transactions. With low transaction fees and
+        1-minute block times, you will have your funds available anywhere and anytime.">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
