--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <li>
           <a  class="js-btn">Contact</a>
         </li>
+	<li>
+          <a  class="js-btn"><button class="buttond">Contact</button</a>
+        </li>
       </ul>
     </nav>
   </header>
