--- a/index.html
+++ b/index.html
@@ -37,29 +37,14 @@
   <header class="js-header" id="header">
     <nav class="header__nav">
       <ul>
-        <li>
-          <a  class="js-btn">Curium</a>
-        </li>
-		
-        <li>
-          <a  class="js-btn focus">Exchanges</a>
-        </li>
-		
-        <li>
-          <a  class="js-btn">Masternodes</a>
-        </li>
-        <li>
-          <a  class="js-btn">Wallet</a>
-        </li>
-        <li>
-          <a  class="js-btn">Resources</a>
-        </li>
-        <li>
-          <a  class="js-btn">FAQ</a>
-        </li>
-        <li>
-          <a  class="js-btn">Contact</a>
-        </li>
+        <li><a  class="js-btn">Curium</a></li>		
+        <li><a  class="js-btn focus">Exchanges</a></li>		
+        <li><a  class="js-btn">Masternodes</a></li>
+        <li><a  class="js-btn">Wallet</a></li>
+        <li><a  class="js-btn">Resources</a></li>
+        <li><a  class="js-btn">FAQ</a></li>
+        <li><a  class="js-btn">Contact</a></li>
+        <li class="buttond"><a class="js-btn">Buy Curium</a></li>	      
        </ul>
     </nav>
   </header>
