--- a/buycurium/index.html
+++ b/buycurium/index.html
@@ -13,16 +13,16 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="icon" type="../image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="../image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="../site.webmanifest">
+  <link rel="mask-icon" href="../safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/button.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/button.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   
 </head>
@@ -37,13 +37,13 @@
   <header class="js-header" id="header">
     <nav class="header__nav">
       <ul>
-        <li><a  class="js-btn" href="../index.html#Curium">Curium</a></li>		
-        <li><a  class="js-btn focus" href="../index.html#Exchanges" >Exchanges</a></li>		
-        <li><a  class="js-btn" href="../index.html#Masternodes" >Masternodes</a></li>
-        <li><a  class="js-btn" href="../index.html#Wallet">Wallet</a></li>
-        <li><a  class="js-btn" href="../index.html#Resources">Resources</a></li>
-        <li><a  class="js-btn" href="../index.html#FAQ">FAQ</a></li>
-        <li><a  class="js-btn" href="../index.html#Contact">Contact</a></li>
+        <li><a  class="js-btn" href="../index.html">Curium</a></li>		
+        <li><a  class="js-btn focus" href="../index.html" >Exchanges</a></li>		
+        <li><a  class="js-btn" href="../index.html" >Masternodes</a></li>
+        <li><a  class="js-btn" href="../index.html">Wallet</a></li>
+        <li><a  class="js-btn" href="../index.html">Resources</a></li>
+        <li><a  class="js-btn" href="../index.html">FAQ</a></li>
+        <li><a  class="js-btn" href="../index.html">Contact</a></li>
         <li class="buttond"><a class="js-btn">Buy Curium</a></li>	      
        </ul>
     </nav>
@@ -66,29 +66,29 @@
 
       <div class="features">
         <div class="feature__block">
-          <img class="feature-img" src="img/svg/masternode.svg" alt="">
+          <img class="feature-img" src="../img/svg/masternode.svg" alt="">
           <p>An integrated network of nodes ensures a safe and effective transfer of funds anywhere in the world</p>
         </div>
         <div class="feature__block">
-          <img class="feature-img" src="img/svg/algo.svg" alt="">
+          <img class="feature-img" src="../img/svg/algo.svg" alt="">
           <p>The latest POS algorithm, ensuring CRU will stay decentralised</p>
         </div>
         <div class="feature__block">
-          <img class="feature-img" src="img/svg/secure.svg" alt="">
+          <img class="feature-img" src="../img/svg/secure.svg" alt="">
           <p>Curium is supported by multiple layers of security including both mining and masternode support</p>
         </div>
         <div class="feature__block">
-          <img class="feature-img" src="img/svg/team.svg" alt="">
+          <img class="feature-img" src="../img/svg/team.svg" alt="">
           <p>Instant Send transactions ensure you can use your funds instantly, anywhere in the world, all you need is an internet
             connection
           </p>
         </div>
         <div class="feature__block">
-          <img class="feature-img" src="img/svg/mining.svg" alt="">
+          <img class="feature-img" src="../img/svg/mining.svg" alt="">
           <p>Developed by a passionate and motivated team, driven by a desire for a global, secure & decentralised way of payment</p>
         </div>
         <div class="feature__block">
-          <img class="feature-img" src="img/svg/id.svg" alt="">
+          <img class="feature-img" src="../img/svg/id.svg" alt="">
           <p>A cryptocurrency with an open-source platform, designed with private and fast transactions in mind</p>
         </div>
       </div>
